# info-hub

./: .gitignore  README.md  code_graph.db  deploy.sh  fupanhezi.py  pyproject.toml  交接手册.md
.github/workflows/: deploy.yml
backend/: .gitignore  config.py  database.py  main.py  requirements.txt  scheduler.py  start.sh  version_info.json  交接手册.md
backend/data/: .market_cache.pkl  historical  investment_calendar.py
backend/llm/: cross_validator.py  deepseek_client.py  methodology.py  prompts.py  qwen_client.py  uwillberich.py
backend/migrations/: wechat_tables.sql
backend/models/: __init__.py  schemas.py  wechat.py
backend/routers/: a_stock_data.py  ai_news.py  aihot_reports.py  article_gen.py  assistant.py  chan.py  cross_validation.py  daily_chance.py  decision.py  evidence.py  fin_news.py  gbrain.py  hot_sectors.py  investment_calendar.py  obsession_phase.py  quant_market.py  review_report.py  signal.py  stock_analysis.py  trading.py  trending.py  turn_strong.py  viral_content.py  wechat.py  zt_analysis.py
backend/scripts/: invest_calendar_report.py  realtime_monitor.py  update_market_cache.py
backend/services/: a_share_technical.py  ad_light_api.py  ai_news_service.py  amazingdata_http_adapter.py  assistant_memory.py  assistant_prompt.py  chan_service.py  choke_point_analyzer.py  comprehensive_analysis.py  decision_engine.py  (+24 more)
frontend/: DESIGN.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: daily_chance_pipeline.sh  gen_daily_chance_report.py  obsidian_knowledge.py  obsidian_stocks.py  obsidian_sync.py  obsidian_watcher.py
(+146 files in other folders)
