[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "info-hub"
version = "1.0.0"
description = "Info-Hub: A comprehensive stock analysis and news aggregation platform."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Huang Richao", email = "huangrichao2020@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "apscheduler==3.10.4",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "baostock",
    "pandas",
    "pyarrow",
    "numpy",
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/huangrichao2020/info-hub"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
